feat: change px to vw for resposiveness

--- a/company monthly report/index.html
+++ b/company monthly report/index.html
@@ -17,7 +17,11 @@
       </div>
 
       <div class="header__logo">
-        <img width="86px" src="./assets/goklaim-logo.svg" alt="goklaim logo" />
+        <img
+          class="header__logo-gk"
+          src="./assets/goklaim-logo.svg"
+          alt="goklaim logo"
+        />
         <div class="header__logo--date">July 2024</div>
       </div>
     </header>
@@ -28,12 +32,7 @@
         <div class="overview__card">
           <div class="overview__card-title">Total Members</div>
           <div class="overview__card-data">
-            <img
-              width="20px"
-              height="20px"
-              src="./assets/users.svg"
-              alt="users"
-            />
+            <img src="./assets/users.svg" alt="users" />
             <div>100</div>
           </div>
         </div>
@@ -41,12 +40,7 @@
         <div class="overview__card">
           <div class="overview__card-title">Claimed Amount</div>
           <div class="overview__card-data">
-            <img
-              width="20px"
-              height="20px"
-              src="./assets/moeny.svg"
-              alt="money"
-            />
+            <img src="./assets/moeny.svg" alt="money" />
             <div>CA$42,459</div>
           </div>
         </div>
@@ -54,12 +48,7 @@
         <div class="overview__card">
           <div class="overview__card-title">Total Claims</div>
           <div class="overview__card-data">
-            <img
-              width="20px"
-              height="20px"
-              src="./assets/paper.svg"
-              alt="receipt"
-            />
+            <img src="./assets/paper.svg" alt="receipt" />
             <div>57</div>
           </div>
         </div>
@@ -67,12 +56,7 @@
         <div class="overview__card">
           <div class="overview__card-title">Opening Balance</div>
           <div class="overview__card-data">
-            <img
-              width="20px"
-              height="20px"
-              src="./assets/wallet.svg"
-              alt="wallet"
-            />
+            <img src="./assets/wallet.svg" alt="wallet" />
             <div>CA$13,000</div>
           </div>
         </div>
@@ -80,12 +64,7 @@
         <div class="overview__card">
           <div class="overview__card-title">Closing Balance</div>
           <div class="overview__card-data">
-            <img
-              width="20px"
-              height="20px"
-              src="./assets/wallet.svg"
-              alt="wallet"
-            />
+            <img src="./assets/wallet.svg" alt="wallet" />
             <div>CA$531</div>
           </div>
         </div>
@@ -93,12 +72,7 @@
         <div class="overview__card">
           <div class="overview__card-title">Allowance Allocated</div>
           <div class="overview__card-data">
-            <img
-              width="20px"
-              height="20px"
-              src="./assets/moeny.svg"
-              alt="money"
-            />
+            <img src="./assets/moeny.svg" alt="money" />
             <div>CA$45,000</div>
           </div>
         </div>
@@ -111,8 +85,7 @@
         <div class="claim-by-category">
           <!-- replace here with chart.js canvas -->
           <img
-            width="164.23px"
-            height="164.23px"
+            class="chart"
             src="./assets/claim-by-category.svg"
             alt="claims by categories"
           />
@@ -275,8 +248,7 @@
 
           <!-- replace here with chart.js canvas -->
           <img
-            width="164.23px"
-            height="164.23px"
+            class="chart"
             src="./assets/claim-by-designation.svg"
             alt="claims by designations"
           />
@@ -284,6 +256,6 @@
       </div>
     </section>
 
-    <section class="generated-at">02 Aug 2024 12:34:54 AM EDT</section>
+    <!-- <section class="generated-at">02 Aug 2024 12:34:54 AM EDT</section> -->
   </body>
 </html>
