feat: add allowances section

--- a/company monthly report/index.html
+++ b/company monthly report/index.html
@@ -79,7 +79,7 @@
       </div>
     </section>
 
-    <section class="claims">
+    <section class="heading-data-container">
       <div class="section-header">Claims</div>
       <div class="claims-section">
         <div class="claim-by-category">
@@ -252,6 +252,392 @@
             src="./assets/claim-by-designation.svg"
             alt="claims by designations"
           />
+        </div>
+      </div>
+    </section>
+
+    <section class="heading-data-container">
+      <div class="section-header">Allowances</div>
+      <div class="allowances-section">
+        <div class="all-allowances">
+          <table class="monthly-report-table">
+            <tr>
+              <th>Name</th>
+              <th>Allowance Used</th>
+              <th>Unused Allowance</th>
+              <th>Members</th>
+            </tr>
+
+            <tr>
+              <td class="monthly-report-table__label">Plan 2024 - 2025</td>
+              <td>
+                <div class="monthly-report-table__data">
+                  <span>$250.00</span>
+                  <span class="monthly-report-table__data-sub">(50%)</span>
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">
+                  <span>$250.00</span>
+                  <span class="monthly-report-table__data-sub">(50%)</span>
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td class="monthly-report-table__label">Work Anniversary</td>
+              <td>
+                <div class="monthly-report-table__data">
+                  <span>$300.00</span>
+                  <span class="monthly-report-table__data-sub">(60%)</span>
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">
+                  <span>$200.00</span>
+                  <span class="monthly-report-table__data-sub">(50%)</span>
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">3</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td class="monthly-report-table__label">Recurring</td>
+              <td>
+                <div class="monthly-report-table__data">
+                  <span>$150.00</span>
+                  <span class="monthly-report-table__data-sub">(43%)</span>
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">
+                  <span>$200.00</span>
+                  <span class="monthly-report-table__data-sub">(57%)</span>
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">7</div>
+              </td>
+            </tr>
+          </table>
+        </div>
+
+        <!-- replace here with chart.js canvas -->
+        <img
+          class="chart"
+          src="./assets/allowances-consumption.svg"
+          alt="allowances consumption"
+        />
+      </div>
+    </section>
+
+    <section class="heading-data-container">
+      <div class="sub-section-header">
+        <div>Plan 2024 - 2025</div>
+        <div class="sub-section-heade__separator"></div>
+        <div class="sub-section-header__details">
+          <div>Health Spending Account (HSA)</div>
+          <div>01/03/2024 - 28/02/2025</div>
+        </div>
+      </div>
+
+      <div class="allowance-details-section">
+        <div class="allowance-table">
+          <table class="monthly-report-table">
+            <tr>
+              <th>Designation</th>
+              <th>Allowance Used</th>
+              <th>Unused Allowance</th>
+              <th>Expired Allowance</th>
+              <th>Total Members</th>
+              <th>Total Claims</th>
+              <th>Claim Approved Amount</th>
+              <th>% used</th>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">
+                  Cheif Executive Officer
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$56.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">40%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">Intern</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$300.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">3</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">3</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$36.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">32%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">Manager</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$150.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">7</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">7</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$386.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">88%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">
+                  Cheif Executive Officer
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$56.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">40%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">Intern</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$300.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">3</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">3</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$36.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">32%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">Manager</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$150.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">7</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">7</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$386.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">88%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">
+                  Cheif Executive Officer
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$56.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">40%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">Intern</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$300.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">3</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">3</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$36.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">32%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">Manager</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$150.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$200.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">7</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">7</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$386.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">88%</div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <div class="monthly-report-table__label">
+                  Cheif Executive Officer
+                </div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$250.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">4</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">$56.00</div>
+              </td>
+              <td>
+                <div class="monthly-report-table__data">40%</div>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
     </section>
